<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/contact"
            android:layout_width="137dp"
            android:layout_height="66dp"
            android:id="@+id/buttonContact"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/on_location"
            android:layout_width="147dp"
            android:layout_height="64dp"
            android:id="@+id/buttonOnloaction" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent"
    />
    <ImageButton
            android:layout_width="174dp"
            android:layout_height="122dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageButtonReport" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.376"
            android:contentDescription="@string/todo"/>
    <Button
            android:text="@string/medivac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMedivac"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71"/>
    <Button
            android:text="@string/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPickup" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71"/>
</androidx.constraintlayout.widget.ConstraintLayout>